# mipt_mlops_sem2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data.dvc  docker-compose.yaml  pyproject.toml
.dvc/: config
conf/: config.yaml
mlops/: pyproject.toml
tools/: infer.py  train.py  train_pl.py  train_without_pl.py
tools/scripts/: dataset.py  model.py  py_lightning_data.py  py_lightning_model.py  trainer.py
