[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "hw2"
authors = ["Artemy <zakharovart01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.2.1"
transformers = "^4.38.2"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
