[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "hw2"
authors = ["Artemy <zakharovart01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.2.1"
transformers = "^4.38.2"
pandas = "^2.2.1"
tqdm = "^4.66.2"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
lightning = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
